--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="Role">Not assigned</string>
     <string name="method">Login Method</string>
     <string name="Choose">Choose Method</string>
+    <string name="TimeValue">Period to Check</string>
+    <string name="InitTimeValue">Init Time</string>
 
 </resources>
