--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,18 +4,20 @@
     <string name="app_name">PHPMYSQL</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="Username">Username</string>
-    <string name="Password">Password</string>
-    <string name="LoginGet">Login - Get</string>
-    <string name="LoginPost">Login - Post</string>
-    <string name="App">Login Application</string>
-    <string name="LoginStatus">Login Status</string>
-    <string name="LoginRole">Login Role</string>
+    <string name="Username">使用者</string>
+    <string name="Password">密碼</string>
+    <string name="LoginGet">使用者登錄</string>
+    <string name="LoginPost">手動檢查</string>
+    <string name="App">資料異常提示系統</string>
+    <string name="ServerIP">伺服器IP</string>
+    <string name="enableRegularCheck">啟動定時檢查</string>
+    <string name="LoginStatus">登錄狀態</string>
+    <string name="LoginRole">使用者身分</string>
     <string name="Status">Not login</string>
     <string name="Role">Not assigned</string>
     <string name="method">Login Method</string>
     <string name="Choose">Choose Method</string>
-    <string name="TimeValue">Period to Check</string>
+    <string name="TimeValue">下次檢查時間</string>
     <string name="InitTimeValue">Init Time</string>
 
 </resources>
