Add handleSigninResults method in SinginActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,11 +13,19 @@
     <string name="enableRegularCheck">啟動定時檢查</string>
     <string name="LoginStatus">登錄狀態</string>
     <string name="LoginRole">使用者身分</string>
-    <string name="Status">Not login</string>
+    <string name="Status">未登入</string>
     <string name="Role">Not assigned</string>
     <string name="method">Login Method</string>
     <string name="Choose">Choose Method</string>
     <string name="TimeValue">下次檢查時間</string>
     <string name="InitTimeValue">Init Time</string>
+    <string name="loginButtonText">使用者登入</string>
+
+    <string name="adminRoleDisplay">管理者</string>
+    <string name="adminRoleDB">administrator</string>
+    <string name="userRoleDisplay">使用者</string>
+    <string name="userRoleDB">user</string>
+    <string name="legalLogin">合法登入</string>
+    <string name="illegalLogin">不合法登入</string>
 
 </resources>
