Tried to fix white square icon and prepared to add a spinner to choose preAlertDuration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,12 @@
 
     <string name="outstandingRecordLabel">異常資料筆數</string>
 
+    <string-array name="preAlertDuration">
+        <item>2</item>
+        <item>5</item>
+        <item>7</item>
+        <item>10</item>
+        <item>15</item>
+    </string-array>
+
 </resources>
