--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,13 +15,14 @@
     <string name="LoginRole">使用者身分</string>
     <string name="Status">未登入</string>
     <string name="Role">未指定</string>
-    <string name="regularCheckPeriod">定檢週期</string>
+    <string name="regularCheckPeriod">定檢週期(秒)</string>
     <string name="Choose">Choose Method</string>
     <string name="TimeValue">下次檢查時間</string>
     <string name="InitTimeValue">未啟動</string>
     <string name="loginButtonText">使用者登入</string>
     <string name="logoutButtonText">使用者登出</string>
 
+    <string name="preAlertLabel">預警時間(天)</string>
     <string name="adminRoleDisplay">管理者</string>
     <string name="adminRoleDB">administrator</string>
     <string name="userRoleDisplay">使用者</string>
